--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <html>
 <head>
-<title>My Demo Page <\title>
+<title>My Demo Page </title>
 </head>
 <body>
    <h1>
      Hello world!
    </h1>
      This is my web page! :)
-<\body>
+</body>
 </html>
