--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
    <h1>
      Hello world!
    </h1>
-     This is my web page! :)
+     This is my web page! :) <br />
+     This is still my web page &nbsp; but one line later
+   <p> this is a paragraph </p>
 </body>
 </html>
