--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
      This is my web page! :) <br />
      This is still my web page &nbsp; but one line later
    <p> this is a paragraph </p>
+   <hr size=‘2’/>
 </body>
 </html>
